spectec/test/interp/neg/undeclared-variable.imp
// Assignment to a variable that was never declared.
x = 5
